--- a/appsettings.json
+++ b/appsettings.json
@@ -8,7 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnectionString": "Data Source=.;Initial Catalog=my-books-db2;Integrated Security=True;Pooling=False"
+    "DefaultConnectionString": "..."
   }
 
 }
